--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,6 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
@@ -36,3 +35,5 @@ jobs:
           echo test, and deploy your project.
       - name: Calculate Lead Time For Change
         uses: SE06-Glasgow-University/lead-time-for-change-action@v1.3
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
