--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,14 @@
     "require": {
         "php": ">=7.2|^8.0",
         "nesbot/carbon": "~2.0",
-        "illuminate/support": "~6.0|~7.0|~8.0|~9.0",
-        "illuminate/database": "~6.0|~7.0|~8.0|~9.0"
+        "illuminate/support": "~6.0|~7.0|~8.0|~9.0|~10.0",
+        "illuminate/database": "~6.0|~7.0|~8.0|~9.0|~10.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "orchestra/testbench": "~4.7.0|~5.0",
         "mockery/mockery": "~1.3",
-        "phpunit/phpunit": "~8.0|~9.0"
+        "phpunit/phpunit": "~8.0|~9.0|~10.0"
     },
     "autoload": {
         "psr-4": {
