--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
     "license": "MIT",
     "type": "library",
     "require": {
-        "php": ">=7.2|^8.0",
-        "nesbot/carbon": "~2.0",
-        "illuminate/support": "~6.0|~7.0|~8.0|~9.0|~10.0",
-        "illuminate/database": "~6.0|~7.0|~8.0|~9.0|~10.0"
+        "php": "^8.1",
+        "nesbot/carbon": "~2.0|~3.0",
+        "illuminate/support": "~10.0|~11.0",
+        "illuminate/database": "~10.0|~11.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
