--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     "require": {
         "php": "^8.1",
         "nesbot/carbon": "~2.0|~3.0",
-        "illuminate/support": "~10.0|~11.0",
-        "illuminate/database": "~10.0|~11.0"
+        "illuminate/support": "~10.0|~11.0|^12.0",
+        "illuminate/database": "~10.0|~11.0|^12.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
